# rust-sfsm

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: mario.rs  protocol.rs
rust-sfsm-macros/: Cargo.toml
rust-sfsm-macros/src/: lib.rs
src/: lib.rs
