[package]
name = "rustfsm"
version = "0.1.0"
edition = "2024"
authors = ["H Bacelar"]
description = "A full static Rust finite state machine macro library"
documentation = "https://docs.rs/rustfsm/latest/rustfsm"
readme = "README.md"
repository = "https://github.com/hbacelar8/rustfsm"
license = "MIT"
keywords = ["state-machine", "fsm", "embedded", "static"]
categories = ["embedded", "no-std::no-alloc"]
exclude = ["examples"]

[features]
std = []
