[package]
name = "rust-sfsm"
version = "0.1.1"
edition = "2024"
authors = ["H Bacelar"]
description = "A full static Rust finite state machine macro library"
documentation = "https://docs.rs/rust-sfsm"
readme = "README.md"
repository = "https://github.com/hbacelar8/rust-sfsm"
license = "MIT"
keywords = ["state-machine", "fsm", "embedded", "static"]
categories = ["embedded", "no-std::no-alloc"]
exclude = ["examples"]

[features]
std = []
